--- a/ix-lab2/notebooks/ix-lab2-notebook-part2.ipynb
+++ b/ix-lab2/notebooks/ix-lab2-notebook-part2.ipynb
@@ -9,13 +9,13 @@
     "\n",
     "---\n",
     "\n",
-    "**Group:** *Your group letter.*\n",
+    "**Group:** *K*\n",
     "\n",
     "**Names:**\n",
     "\n",
-    "* *Name 1*\n",
-    "* *Name 2*\n",
-    "* *Name 3*\n",
+    "* *Robin Lang*\n",
+    "* *Kim Lan Phan Hoang*\n",
+    "* *Julien Harbulot*\n",
     "\n",
     "---\n",
     "\n",
@@ -39,13 +39,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# ... WRITE YOUR CODE HERE..."
+    "import requests\n",
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24.16\n"
+     ]
+    }
+   ],
+   "source": [
+    "URL_TEMPLATE = 'http://iccluster118.iccluster.epfl.ch:5050/v1.0/facebook?user={user_id}'\n",
+    "uid = 'f30ff3966f16ed62f5165a229a19b319'\n",
+    "count = 0\n",
+    "N = 100\n",
+    "s = 0\n",
+    "while count < N:\n",
+    "    url = URL_TEMPLATE.format(user_id=uid)\n",
+    "    response = requests.get(url)\n",
+    "    data = response.json()\n",
+    "    s += data['age']\n",
+    "    count += 1\n",
+    "    uid = random.choice(data['friends'])\n",
+    "\n",
+    "print(\"\", s / N)"
    ]
   },
   {
@@ -67,9 +100,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python3"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -81,7 +114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
