Lab2: begin part 2

--- a/ix-lab2/notebooks/ix-lab2-notebook-part2.ipynb
+++ b/ix-lab2/notebooks/ix-lab2-notebook-part2.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -60,7 +60,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "24.16\n"
+      "28.4\n"
      ]
     }
    ],
@@ -78,7 +78,14 @@
     "    count += 1\n",
     "    uid = random.choice(data['friends'])\n",
     "\n",
-    "print(\"\", s / N)"
+    "print(\"Obtained average = \", s / N, \"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our average age of users is obtained between 20 and 27 years old. Since our first node age is 24, it will be likely that its friends (and the friends of its friends) will be around the same age."
    ]
   },
   {
