Lab2: begin part 3

--- a/ix-lab2/notebooks/ix-lab2-notebook-part2.ipynb
+++ b/ix-lab2/notebooks/ix-lab2-notebook-part2.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -60,7 +60,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "28.4\n"
+      "Obtained average = 23.23 with 100 users\n"
      ]
     }
    ],
@@ -78,7 +78,7 @@
     "    count += 1\n",
     "    uid = random.choice(data['friends'])\n",
     "\n",
-    "print(\"Obtained average = \", s / N, \"\")"
+    "print(\"Obtained average =\", s / N, \"with\", N, \"users\")"
    ]
   },
   {
@@ -93,6 +93,17 @@
    "metadata": {},
    "source": [
     "#### Exercise 2.8"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "1. Our average is a bit far from this.\n",
+    "2. Since our first node age is 24, it will be likely that its friends (and the friends of its friends) will be around the same age.\n",
+    "3. We could run the algorithm many times, get an average for each time, and then do an average on the average results. We could also spread a little faster in the graph: instead of getting the direct friend, we could get a random friend of a random friend directly."
    ]
   },
   {
