notebook3 ex 2.11 finished

--- a/ix-lab2/notebooks/ix-lab2-notebook-part3.ipynb
+++ b/ix-lab2/notebooks/ix-lab2-notebook-part3.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 141,
    "metadata": {
     "collapsed": false
    },
@@ -43,12 +43,15 @@
     "%matplotlib inline\n",
     "\n",
     "import networkx as nx\n",
-    "from networkx.readwrite import json_graph"
+    "from networkx.readwrite import json_graph\n",
+    "\n",
+    "import operator\n",
+    "import math"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 142,
    "metadata": {
     "collapsed": true
    },
@@ -71,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 143,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -81,7 +84,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epidemic stopped after 105.11 days | 105.11 days elapsed | 0.1% susceptible, 0.0% infected, 99.9% recovered\n"
+      "Epidemic stopped after 103.33 days | 103.33 days elapsed | 0.1% susceptible, 0.0% infected, 99.9% recovered\n"
      ]
     }
    ],
@@ -98,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 144,
    "metadata": {
     "collapsed": true
    },
@@ -368,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 52,
    "metadata": {
     "collapsed": true
    },
@@ -491,8 +494,124 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The best strategy would be to divide our graph into connected components, so that the pandemic is constrained only in a part of the graph. Since the graph is a unique big connected component, we divide the whole graph by deleting edges which are contained in the shortest paths linking nodes whose degree are high. This works because these high degree nodes are far from each other and thus offer a nice slicing of the graph. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 193,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# delete shortest path from degree one to max degree -> want to form isolated island\n",
+    "\n",
+    "def strategy22(numberRuns, numberEdgesToRemove, days):\n",
+    "    \n",
+    "    rec = []\n",
+    "    inf = []\n",
+    "    sus = []\n",
+    "    \n",
+    "    G = json_graph.node_link_graph(file_json)\n",
+    "    degree_sequence=nx.degree(G) # degree sequence\n",
+    "    s = sorted(degree_sequence.items(), key=operator.itemgetter(1))\n",
+    "    count = 0\n",
+    "    \n",
+    "    while (numberEdgesToRemove > 0):\n",
+    "        source = s[count][0]\n",
+    "        target = s[-count-1][0]\n",
+    "        \n",
+    "        # remove shortest path between high degree nodes\n",
+    "        if(nx.has_path(G,source=source,target=target)):\n",
+    "            toRemove = (nx.shortest_path(G,source=source,target=target))\n",
+    "            numberEdgesToRemove -= len(toRemove)\n",
+    "            \n",
+    "            # if the path is longer than the remaining removable edges, we only delete the first ones \n",
+    "            if(numberEdgesToRemove < 0) :\n",
+    "                toRemove = toRemove[:(-numberEdgesToRemove)]\n",
+    "            \n",
+    "            i=0\n",
+    "            while ((i+1 < len(toRemove))):\n",
+    "                G.remove_edge(toRemove[i],toRemove[i+1])\n",
+    "                i+=1\n",
+    "                \n",
+    "        count+=2\n",
+    "\n",
+    "\n",
+    "    for i in range(numberRuns):\n",
+    "        randomNode = random.choice(G.nodes())\n",
+    "        print(\"random node : \", randomNode)\n",
+    "        sir = epidemics_helper.SimulationSIR(G, beta=10.0, gamma=0.1)\n",
+    "        sir.launch_epidemic(source=randomNode, max_time=100.0)\n",
+    "        res = SIR(days, sir.inf_time, sir.rec_time, num_nodes)\n",
+    "        sus.append(res[0])\n",
+    "        inf.append(res[1])\n",
+    "        sus.append(res[0])\n",
+    "        \n",
+    "    return(sus, inf, res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# delete shortest path between high degree nodes -> want to form isolated island\n",
+    "\n",
+    "def strategy23(numberRuns, numberEdgesToRemove, days):\n",
+    "    \n",
+    "    rec = []\n",
+    "    inf = []\n",
+    "    sus = []\n",
+    "    \n",
+    "    G = json_graph.node_link_graph(file_json)\n",
+    "    degree_sequence=nx.degree(G) # degree sequence\n",
+    "    s = sorted(degree_sequence.items(), key=operator.itemgetter(1)) # sort nodes depending on their degree\n",
+    "    count = 0\n",
+    "    \n",
+    "    while (numberEdgesToRemove > 0):\n",
+    "        source = s[-count][0]\n",
+    "        target = s[-count-1][0]\n",
+    "        \n",
+    "        # remove shortest path between high degree nodes\n",
+    "        if(nx.has_path(G,source=source,target=target)): \n",
+    "            toRemove = (nx.shortest_path(G,source=source,target=target))\n",
+    "            numberEdgesToRemove -= len(toRemove)\n",
+    "            \n",
+    "            # if the path is longer than the remaining removable edges, we only delete the first ones \n",
+    "            if(numberEdgesToRemove < 0) :\n",
+    "                toRemove = toRemove[:(-numberEdgesToRemove)]\n",
+    "            \n",
+    "            i=0\n",
+    "            while ((i+1 < len(toRemove))):\n",
+    "                G.remove_edge(toRemove[i],toRemove[i+1])\n",
+    "                i+=1\n",
+    "        count+=2\n",
+    "\n",
+    "\n",
+    "    for i in range(numberRuns):\n",
+    "        randomNode = random.choice(G.nodes())\n",
+    "        print(\"random node : \", randomNode)\n",
+    "        sir = epidemics_helper.SimulationSIR(G, beta=10.0, gamma=0.1)\n",
+    "        sir.launch_epidemic(source=randomNode, max_time=100.0)\n",
+    "        res = SIR(days, sir.inf_time, sir.rec_time, num_nodes)\n",
+    "        sus.append(res[0])\n",
+    "        inf.append(res[1])\n",
+    "        sus.append(res[0])\n",
+    "        \n",
+    "    return(sus, inf, res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
    "metadata": {
     "collapsed": false
    },
@@ -501,29 +620,64 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0: 3, 1: 1, 2: 2, 3: 4, 4: 3, 5: 3, 6: 1, 7: 7, 8: 3, 9: 1, 10: 4, 11: 2, 12: 1, 13: 1, 14: 2, 15: 2, 16: 6, 17: 2, 18: 1, 19: 1, 20: 3, 21: 1, 22: 0, 23: 2, 24: 0, 25: 4, 26: 2, 27: 1, 28: 1, 29: 3, 30: 1, 31: 7, 32: 4, 33: 1, 34: 1, 35: 0, 36: 2, 37: 2, 38: 0, 39: 2, 40: 2, 41: 3, 42: 0, 43: 1, 44: 1, 45: 2, 46: 3, 47: 4, 48: 2, 49: 3, 50: 0, 51: 0, 52: 4, 53: 1, 54: 4, 55: 2, 56: 2, 57: 3, 58: 3, 59: 2, 60: 3, 61: 1, 62: 3, 63: 5, 64: 6, 65: 4, 66: 1, 67: 3, 68: 1, 69: 3, 70: 0, 71: 2, 72: 1, 73: 1, 74: 2, 75: 2, 76: 1, 77: 0, 78: 0, 79: 0, 80: 2, 81: 3, 82: 4, 83: 0, 84: 2, 85: 0, 86: 0, 87: 2, 88: 2, 89: 1, 90: 3, 91: 2, 92: 2, 93: 0, 94: 1, 95: 1, 96: 3, 97: 3, 98: 1, 99: 0}\n",
-      "99\n"
+      "random node :  25114\n",
+      "Epidemic stopped after 116.34 days | 116.34 days elapsed | 56.1% susceptible, 0.0% infected, 43.8% recovered\n",
+      "random node :  7224\n",
+      "Epidemic stopped after 102.88 days | 102.88 days elapsed | 56.3% susceptible, 0.0% infected, 43.6% recovered\n",
+      "random node :  633\n",
+      "Epidemic stopped after 98.72 days | 98.72 days elapsed | 56.1% susceptible, 0.0% infected, 43.9% recovered\n",
+      "random node :  5141\n",
+      "Epidemic stopped after 99.34 days | 99.34 days elapsed | 82.9% susceptible, 0.0% infected, 17.1% recovered\n",
+      "random node :  5307\n",
+      "Epidemic stopped after 78.02 days | 78.02 days elapsed | 82.9% susceptible, 0.0% infected, 17.1% recovered\n",
+      "random node :  11193\n",
+      "Epidemic stopped after 102.48 days | 102.48 days elapsed | 56.2% susceptible, 0.0% infected, 43.8% recovered\n",
+      "random node :  1013\n",
+      "Epidemic stopped after 109.65 days | 109.65 days elapsed | 56.2% susceptible, 0.0% infected, 43.8% recovered\n",
+      "random node :  22198\n",
+      "Epidemic stopped after 135.01 days | 135.01 days elapsed | 83.2% susceptible, 0.0% infected, 16.8% recovered\n",
+      "random node :  24334\n",
+      "Epidemic stopped after 105.76 days | 105.76 days elapsed | 56.1% susceptible, 0.0% infected, 43.9% recovered\n",
+      "random node :  14339\n",
+      "Epidemic stopped after 106.91 days | 106.91 days elapsed | 80.6% susceptible, 0.0% infected, 19.4% recovered\n",
+      "------------------------------------------------------------------------------------\n",
+      "Average people susceptible without 2500 random edges after 30 days :  66.66628903742307 %\n",
+      "random node :  16791\n",
+      "Epidemic stopped after 90.14 days | 90.14 days elapsed | 80.2% susceptible, 0.0% infected, 19.8% recovered\n",
+      "random node :  26042\n",
+      "Epidemic stopped after 100.28 days | 100.28 days elapsed | 56.3% susceptible, 0.0% infected, 43.7% recovered\n",
+      "random node :  17204\n",
+      "Epidemic stopped after 91.33 days | 91.33 days elapsed | 80.2% susceptible, 0.0% infected, 19.8% recovered\n",
+      "random node :  4876\n",
+      "Epidemic stopped after 100.83 days | 100.83 days elapsed | 65.7% susceptible, 0.0% infected, 34.3% recovered\n",
+      "random node :  8933\n",
+      "Epidemic stopped after 99.77 days | 99.77 days elapsed | 56.2% susceptible, 0.0% infected, 43.8% recovered\n",
+      "random node :  20934\n",
+      "Epidemic stopped after 116.04 days | 116.04 days elapsed | 65.7% susceptible, 0.0% infected, 34.3% recovered\n",
+      "random node :  22791\n",
+      "Epidemic stopped after 99.16 days | 99.16 days elapsed | 65.7% susceptible, 0.0% infected, 34.3% recovered\n",
+      "random node :  22064\n",
+      "Epidemic stopped after 111.58 days | 111.58 days elapsed | 65.7% susceptible, 0.0% infected, 34.3% recovered\n",
+      "random node :  15106\n",
+      "Epidemic stopped after 119.07 days | 119.07 days elapsed | 80.1% susceptible, 0.0% infected, 19.9% recovered\n",
+      "random node :  20939\n",
+      "Epidemic stopped after 97.20 days | 97.20 days elapsed | 65.7% susceptible, 0.0% infected, 34.3% recovered\n",
+      "------------------------------------------------------------------------------------\n",
+      "Average people susceptible without 2500 random edges after 30 days :  68.16358898833127 %\n"
      ]
     }
    ],
    "source": [
-    "H = nx.gnp_random_graph(100,0.02)\n",
+    "s2,i2,r2 = strategy22(10, 2500, 30)\n",
     "\n",
-    "degree_sequence=nx.degree(H) # degree sequence\n",
-    "#print \"Degree sequence\", degree_sequence\n",
-    "dmax=max(degree_sequence)\n",
-    "print(degree_sequence)\n",
-    "print(dmax)"
+    "print(\"------------------------------------------------------------------------------------\")\n",
+    "print(\"Average people susceptible without 2500 random edges after 30 days : \",average(s2)*100/nx.number_of_nodes(G),\"%\")\n",
+    "\n",
+    "s2,i2,r2 = strategy23(10, 2500, 30)\n",
+    "\n",
+    "print(\"------------------------------------------------------------------------------------\")\n",
+    "print(\"Average people susceptible without 2500 random edges after 30 days : \",average(s2)*100/nx.number_of_nodes(G),\"%\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
