--- a/ix-lab3/lab3-recsys.ipynb
+++ b/ix-lab3/lab3-recsys.ipynb
@@ -66,37 +66,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\"movieId\": 2, \"userId\": 1, \"timestamp\": 1112486027, \"rating\": 3.5}\n",
-      "{\"movieId\": 29, \"userId\": 1, \"timestamp\": 1112484676, \"rating\": 3.5}\n",
-      "{\"movieId\": 32, \"userId\": 1, \"timestamp\": 1112484819, \"rating\": 3.5}\n",
-      "{\"movieId\": 47, \"userId\": 1, \"timestamp\": 1112484727, \"rating\": 3.5}\n",
-      "{\"movieId\": 50, \"userId\": 1, \"timestamp\": 1112484580, \"rating\": 3.5}\n",
-      "{\"movieId\": 112, \"userId\": 1, \"timestamp\": 1094785740, \"rating\": 3.5}\n",
-      "{\"movieId\": 151, \"userId\": 1, \"timestamp\": 1094785734, \"rating\": 4.0}\n",
-      "{\"movieId\": 223, \"userId\": 1, \"timestamp\": 1112485573, \"rating\": 4.0}\n",
-      "{\"movieId\": 253, \"userId\": 1, \"timestamp\": 1112484940, \"rating\": 4.0}\n",
-      "{\"movieId\": 260, \"userId\": 1, \"timestamp\": 1112484826, \"rating\": 4.0}\n",
-      "{\"movieId\": 293, \"userId\": 1, \"timestamp\": 1112484703, \"rating\": 4.0}\n",
-      "{\"movieId\": 296, \"userId\": 1, \"timestamp\": 1112484767, \"rating\": 4.0}\n",
-      "{\"movieId\": 318, \"userId\": 1, \"timestamp\": 1112484798, \"rating\": 4.0}\n",
-      "{\"movieId\": 337, \"userId\": 1, \"timestamp\": 1094785709, \"rating\": 3.5}\n",
-      "{\"movieId\": 367, \"userId\":\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data = open(\"ratings Kopie.txt\", \"r\")\n",
-    "file = data.read(1000)\n",
-    "print(file)"
+    "from operator import add\n",
+    "movieRating = data.map(lambda d : (d[\"movieId\"], 1)).foldByKey(0, add).collect()\n",
+    "userRating = data.map(lambda d : (d[\"userId\"], 1)).foldByKey(0, add).collect()"
    ]
   },
   {
@@ -117,37 +95,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
+     "ename": "NameError",
+     "evalue": "name 'movieRating' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-30-4306d7294b58>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mline\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mfin\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m         \u001b[0mk\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mline\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\",:\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m         \u001b[1;32mif\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32min\u001b[0m \u001b[0md\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m             \u001b[0md\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-41-47dac5b0de79>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmoveRating_val\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mmovieRating\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmovieRating_val\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfacecolor\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'green'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtitle\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Gaussian Histogram\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mxlabel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Movies\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mylabel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Number of ratings\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'movieRating' is not defined"
      ]
     }
    ],
    "source": [
-    "from collections import defaultdict\n",
-    "\n",
-    "d = defaultdict(list)\n",
-    "\n",
-    "\n",
-    "with open(\"ratings Kopie.txt\", \"r\") as fin:\n",
-    "    for line in fin:\n",
-    "        k = line.split(\",:\")\n",
-    "        if(k[1] in d):\n",
-    "            d[k]\n",
-    "        print(k)\n",
-    "        #d[k].append(v)\n",
-    "print(d)"
+    "moveRating_val = [x[1] for x in movieRating]\n",
+    "plt.hist(movieRating_val, facecolor='green')\n",
+    "plt.title(\"Gaussian Histogram\")\n",
+    "plt.xlabel(\"Movies\")\n",
+    "plt.ylabel(\"Number of ratings\")"
    ]
   },
   {
