lab3 recsys : update 3.5 + 3.7, 3.8, 3.9

--- a/ix-lab3/lab3-recsys.ipynb
+++ b/ix-lab3/lab3-recsys.ipynb
@@ -366,7 +366,7 @@
     "# item bias beta_m\n",
     "def beta_m(m, mu):\n",
     "    \n",
-    "    set_m = data.filter(lambda y : y[\"movieId\"] == m).map(lambda x : x[\"rating\"]-mu).collect()\n",
+    "    set_m = data.filter(lambda y : y[\"movieId\"] == m).map(lambda x : x[\"rating\"]-alpha(x[\"userId\"],mu)-mu).collect()\n",
     "    beta = set_m.mean()\n",
     "    return beta\n",
     "    \n",
@@ -415,7 +415,16 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "muValidation = mu(validationSetObject)\n",
+    "\n",
+    "def computeRating(u,m) :\n",
+    "    r = muValidation + alpha_u(u, muValidation) + beta(m, muValidation)\n",
+    "    return r\n",
+    "\n",
+    "\n",
+    "validationSet.map(lambda x: computeRating(x[\"userId\"],x[\"movieId\"]))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -439,25 +448,30 @@
    },
    "outputs": [],
    "source": [
+    "\n",
     "#number of users\n",
     "U = 100\n",
     "\n",
-    "def error():\n",
-    "    res = 0\n",
+    "def error(rdd):\n",
+    "    square = rdd.map(lambda x: (computeRatingError(x[0],x[1])-x[2]) * (computeRatingError(x[0],x[1])-x[2]))\n",
+    "    root = sqrt(square.mean())\n",
+    "    return root.mean()\n",
     "    \n",
-    "    for u in range(users):\n",
+    "    \"\"\"for u in range(users):\n",
     "        tmp = 0\n",
     "        Nu = 10 # number of rating for user u\n",
     "        mu = mu()\n",
     "        \n",
     "        for m in range(movies):\n",
     "            r_um = mu + alpha_u(u, mu) + beta_m(m, mu)\n",
-    "            tmp = tmp + (r_um - rating[u,m])**2\n",
+    "            tmp = tmp + (computeR - rating[u,m])**2\n",
     "            \n",
     "        res = res + np.sqrt(tmp/N_u)\n",
     "            \n",
     "    res = res/U\n",
-    "    return res"
+    "    return res\n",
+    "    \"\"\"\n",
+    "\n"
    ]
   },
   {
@@ -494,10 +508,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "### How accurate are the predicted ratings? Can you explain the phenomenon?"
+    "rank = 10\n",
+    "numIterations = 10"
    ]
   },
   {
@@ -516,16 +535,28 @@
     }
    ],
    "source": [
-    "lambda_ = 1e-4\n",
-    "print(lambda_)\n",
-    "\n",
-    "pyspark.mllib.recommendation.ALS()\n",
-    "\n",
-    "\"\"\"\n",
-    "learning a model with ALS()\n",
-    "2.  predicting ratings on the validation set using model.predictAll()\n",
-    "3.  evaluating the predictions using error()\n",
-    "\"\"\""
+    "def recommendation(lambda_):\n",
+    "    model = ALS.train(trainingSet, rank, numIterations, lambda_)\n",
+    "    predictions = model.predictAll(validationSet).map(lambda r: (r[0], r[1], r[2]))\n",
+    "    return error(predictions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### How accurate are the predicted ratings? Can you explain the phenomenon?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "print(recommendation(1e-4))"
    ]
   },
   {
@@ -543,7 +574,7 @@
    },
    "outputs": [],
    "source": [
-    "lambda_ = 10"
+    "print(recommendation(10))"
    ]
   },
   {
@@ -560,7 +591,10 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "best_lambda = 0.01\n",
+    "print(recommendation(best_lambda))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -586,6 +620,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "model = ALS.train(trainingSet, rank, numIterations, best_lambda)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -600,7 +645,7 @@
    },
    "outputs": [],
    "source": [
-    "model.recommendProducts()\n"
+    "model.recommendProducts(\"123\",10)"
    ]
   },
   {
@@ -617,7 +662,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "model.recommendProducts(\"138494\",10)"
+   ]
   },
   {
    "cell_type": "markdown",
