--- a/ix-lab3/lab3-dimred.ipynb
+++ b/ix-lab3/lab3-dimred.ipynb
@@ -4,7 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lab 3 — dimensionality reduction"
+    "# Lab 3 — dimensionality reduction\n",
+    "**Internet Analytics - Lab 2**\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**Group:** *K*\n",
+    "\n",
+    "**Names:**\n",
+    "\n",
+    "* *Robin Lang*\n",
+    "* *Kim Lan Phan Hoang*"
    ]
   },
   {
@@ -445,9 +455,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python3"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
