--- a/ix-lab3/lab3-clustering.ipynb
+++ b/ix-lab3/lab3-clustering.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Lab 3 — clustering\n",
-    "**Internet Analytics - Lab 2**\n",
+    "**Internet Analytics - Lab 3**\n",
     "\n",
     "---\n",
     "\n",
@@ -150,9 +150,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
