--- a/ix-lab3/lab3-clustering.ipynb
+++ b/ix-lab3/lab3-clustering.ipynb
@@ -29,6 +29,9 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pickle\n",
+    "import random\n",
+    "\n",
+    "import sklearn.cluster as scl\n",
     "\n",
     "%matplotlib inline\n",
     "plt.style.use(\"ggplot\")"
@@ -57,7 +60,31 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#http://scikit-learn.org/stable/modules/generated/sklearn.cluster.k_means.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "km2 = scl.k_means(data,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "km5 = scl.k_means(data,5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -112,7 +139,79 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def jaccard_index(a,b):\n",
+    "    return (a union b) / (a intersect b)\n",
+    "\n",
+    "def jaccard_distance(a,b):\n",
+    "    return 1-jaccard_index(a,b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def kmedioids(points, k):\n",
+    "    medioids = np.array(k)\n",
+    "    clusters = np.array(k)\n",
+    "    \n",
+    "    # initialize medioids\n",
+    "    for i in range k:\n",
+    "        medioids[i] = random.choice(points)\n",
+    "        clusters[i] = []\n",
+    "        \n",
+    "    # convergence parameters\n",
+    "    convergedLimit = 2\n",
+    "    convergedLoop = 0\n",
+    "        \n",
+    "    # repeat until convergence\n",
+    "    while(convergedLoop < convergedLimit):\n",
+    "        \n",
+    "        #initialize cluster_tmp (use it to check convergence)\n",
+    "        clusters_tmp = np.array(k)\n",
+    "        for i in range k:\n",
+    "            clusters_tmp[i] = []\n",
+    "            \n",
+    "        \n",
+    "        # class points in clusters\n",
+    "        for p in points:\n",
+    "            min_i = 0\n",
+    "            jdk = 1000000000\n",
+    "            for i in range k:\n",
+    "                jdi = jaccard_distance(medioids[i], p)\n",
+    "                if(jdi < jdk):\n",
+    "                    min_i = i\n",
+    "                    jdk = jdi\n",
+    "                    \n",
+    "            clusters_tmp[min_i].append(p)\n",
+    "        \n",
+    "        #recompute medioids -> choose the closest point to the others\n",
+    "        for i in range k:\n",
+    "            best_x = 0\n",
+    "            for x in range clusters_tmp[i]:\n",
+    "                \n",
+    "                add = 0\n",
+    "                best_add = 1000000000\n",
+    "                \n",
+    "                for y in range clusters_tmp[i]:\n",
+    "                    add = add + jaccard_distance(x,y)\n",
+    "                    \n",
+    "                if add < best_add:\n",
+    "                    best_add = add\n",
+    "                    best_x = x\n",
+    "                    \n",
+    "            medioids[i] = best_x\n",
+    "            \n",
+    "        # check convergence\n",
+    "        if(clusters_tmp == clusters):\n",
+    "            convergedLoop = convergedLoop + 1\n",
+    "        else :\n",
+    "            convergedLoop = 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -150,9 +249,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python3"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
