--- a/ix-lab3/lab3-clustering.ipynb
+++ b/ix-lab3/lab3-clustering.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -134,14 +134,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "def intersect(a, b):\n",
+    "     return list(set(a) & set(b))\n",
+    "\n",
     "def jaccard_index(a,b):\n",
-    "    return (a union b) / (a intersect b)\n",
+    "    return len(a + b) / len(intersect(a,b))\n",
     "\n",
     "def jaccard_distance(a,b):\n",
     "    return 1-jaccard_index(a,b)"
@@ -149,9 +152,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -160,7 +163,7 @@
     "    clusters = np.array(k)\n",
     "    \n",
     "    # initialize medioids\n",
-    "    for i in range k:\n",
+    "    for i in range(k):\n",
     "        medioids[i] = random.choice(points)\n",
     "        clusters[i] = []\n",
     "        \n",
@@ -173,7 +176,7 @@
     "        \n",
     "        #initialize cluster_tmp (use it to check convergence)\n",
     "        clusters_tmp = np.array(k)\n",
-    "        for i in range k:\n",
+    "        for i in range(k):\n",
     "            clusters_tmp[i] = []\n",
     "            \n",
     "        \n",
@@ -181,7 +184,7 @@
     "        for p in points:\n",
     "            min_i = 0\n",
     "            jdk = 1000000000\n",
-    "            for i in range k:\n",
+    "            for i in range(k):\n",
     "                jdi = jaccard_distance(medioids[i], p)\n",
     "                if(jdi < jdk):\n",
     "                    min_i = i\n",
@@ -190,14 +193,14 @@
     "            clusters_tmp[min_i].append(p)\n",
     "        \n",
     "        #recompute medioids -> choose the closest point to the others\n",
-    "        for i in range k:\n",
+    "        for i in range(k):\n",
     "            best_x = 0\n",
-    "            for x in range clusters_tmp[i]:\n",
+    "            for x in clusters_tmp[i]:\n",
     "                \n",
     "                add = 0\n",
     "                best_add = 1000000000\n",
     "                \n",
-    "                for y in range clusters_tmp[i]:\n",
+    "                for y in clusters_tmp[i]:\n",
     "                    add = add + jaccard_distance(x,y)\n",
     "                    \n",
     "                if add < best_add:\n",
@@ -222,12 +225,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "object of type '_io.BufferedReader' has no len()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-11-258d8dd4a386>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"most-rated.pickle\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"rb\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mkmedioids\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-8-a6fb0de52fc1>\u001b[0m in \u001b[0;36mkmedioids\u001b[1;34m(points, k)\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;31m# initialize medioids\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m         \u001b[0mmedioids\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mchoice\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpoints\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m         \u001b[0mclusters\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\Users\\kl\\Anaconda3\\lib\\random.py\u001b[0m in \u001b[0;36mchoice\u001b[1;34m(self, seq)\u001b[0m\n\u001b[0;32m    251\u001b[0m         \u001b[1;34m\"\"\"Choose a random element from a non-empty sequence.\"\"\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    252\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 253\u001b[1;33m             \u001b[0mi\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_randbelow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mseq\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    254\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    255\u001b[0m             \u001b[1;32mraise\u001b[0m \u001b[0mIndexError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Cannot choose from an empty sequence'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: object of type '_io.BufferedReader' has no len()"
+     ]
+    }
+   ],
+   "source": [
+    "f = open(\"most-rated.pickle\", \"rb\")\n",
+    "kmedioids(f, 2)"
+   ]
   },
   {
    "cell_type": "markdown",
